# yadro-task

./: .gitignore  CMakeLists.txt  README.md
include/: file_tape.h  pch.h  tape_factory.h  tape_interface.h  tape_sorting.h
src/: file_tape.cpp  main.cpp  tape_factory.cpp  tape_sorting.cpp
test/: file_tape_test.h  main.cpp  tape_config_test.h  tape_sorting_test.h  test_utils.h
